--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+kpmh:
+  name: kpmg
 
-two:
-  name: MyString
+pwc:
+  name: pwc
